# claude-devtools-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: profiling.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/commands/: claude_md.rs  config.rs  mod.rs  notifications.rs  projects.rs  search.rs  sessions.rs  shell.rs  validation.rs
src-tauri/src/config/: defaults.rs  manager.rs  mod.rs
src-tauri/src/git/: detector.rs
src-tauri/src/jsonl/: parser.rs  reader.rs
src-tauri/src/models/: api.rs  chunks.rs  config.rs  constants.rs  domain.rs  jsonl.rs  messages.rs  mod.rs  notifications.rs  visualization.rs
src-tauri/src/notifications/: evaluator.rs  mod.rs  store.rs  trigger_tester.rs
src-tauri/src/parser/: chunk_builder.rs  conversation_grouper.rs  message_classifier.rs  mod.rs  semantic_extractor.rs  tool_linker.rs  waterfall_builder.rs
src-tauri/src/scanner/: mod.rs  projects.rs  sessions.rs  subagents.rs
src-tauri/src/search/: engine.rs
src-tauri/src/watcher/: debouncer.rs  file_watcher.rs  mod.rs
src/main/types/: chunks.ts  domain.ts  jsonl.ts  messages.ts
src/renderer/: CLAUDE.md  index.css
src/renderer/api/: index.ts  tauriClient.ts
src/renderer/constants/: layout.ts
src/renderer/contexts/: TabUIContext.tsx
src/renderer/hooks/: useAutoScrollBottom.ts  useTabNavigationController.ts  useTabUI.ts
src/renderer/store/: index.ts
src/shared/: CLAUDE.md
(+81 files in other folders)
