[package]
name = "claude-devtools-tauri"
version = "0.1.0"
description = "Claude DevTools — visualize Claude Code sessions"
authors = ["claude-devtools contributors"]
edition = "2021"

[lib]
name = "claude_devtools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }
dirs = "6"
regex = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
rayon = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"

[dev-dependencies]
tempfile = "3"
